<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geely_autoparts</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <color name="colorRow">#B22400</color>

    <string name="items">Items</string>
    <string name="adapter">Adapter</string>
    <string name="cursor">Cursor</string>
    <string name="logoTitle">Пополняемый каталог</string>
    <string name="logoTitle2">(аналоги и оригиналы)</string>
    <string name="year">2013</string>
    <string name="version">v. 1.0</string>
    <string name="linkUkrForum">www.geely-club.com.ua/forum/</string>
    <string name="linkRusForum">www.geely-club.com/forum/</string>
    <string name="menuAbout">О каталоге</string>
    <string name="chooseModel">Марка авто</string>
    <string name="aboutTitle">О каталоге</string>
    
    <string name="CK">CK/OTAKA</string>
    <string name="MK">MK</string>
    <string name="FC">FC/VISION</string>
    
    <string name="aboutText"> Данный каталог   представляет собой подборку  аналогов запчастей  для автомобилей Geely MK/MK2/CROSS,
       собранный благодаря стараниям пользователей украинского и российского джили клубов.
       Условием занесения артикула детали в  каталог, является предварительная установка и  подтверждение совместимости с указанным автомобилем.
       Обращаю Ваше  внимание, что никто не дает 100% гарантии на  совместимость деталей, поэтому  перед покупкой убедитесь в правильном подборе аналога.
</string>
    <string name="yes">Ознакомлен</string>
    
    
    <string name="search_hint">поиск аналога</string>
    <string name="searchFull_hint">поиск</string>
    <string name="search_add">Найти</string>
    <string name="search_no_records">Нет результатов</string>
    <dimen name="srh_field_width">175dp</dimen>
    <dimen name="srh_field_height">45dp</dimen>
    <dimen name="srh_btn_width">80dp</dimen>
    <dimen name="srh_btn_height">45dp</dimen>
    <dimen name="menu_table_width">200dp</dimen>
    <dimen name="menu_btn_height">30dp</dimen>
    <dimen name="menu_margtop_btn">2dp</dimen>
    <dimen name="menu_textsize_btn">16sp</dimen>
    <string name="fdb_title">Выход</string>
    <string name="fdb_text">Если Вам понравился каталог, оставить отзыв о приложении ?</string>
    <string name="fdb_yes">Да</string>
    <string name="fdb_no">Нет</string>
    <string name="fdb_later">Позже</string>
   
    
   


    </resources>
