<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@layout/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <EditText
            android:id="@+id/fullSrhField"
            android:layout_width="@dimen/srh_field_width"
            android:layout_height="@dimen/srh_btn_height"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/searchFull_hint"
            android:padding="2dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/srhAdd"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/srh_btn_width"
            android:layout_height="@dimen/srh_btn_height"
            android:layout_alignParentRight="true"
            android:text="@string/search_add" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radioGroupMarks"
        android:layout_width="match_parent"
        android:layout_height="@dimen/srh_btn_height"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/ck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/CK"
            android:textColor="#999966" />

        <RadioButton
            android:id="@+id/mk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MK"
            android:textColor="#999966" />

        <RadioButton
            android:id="@+id/fc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FC"
            android:textColor="#999966" />
       
    </RadioGroup>

    <ListView
        android:id="@+id/srhResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#00000000" >

    </ListView>

</LinearLayout>