<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@layout/bg"
    android:gravity="right"
    android:padding="5dp"
    tools:context=".MainActivity" >

	 <ImageView
	     android:id="@+id/imgV"
	     style="@style/AppBaseTheme"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_centerHorizontal="true"
	     android:layout_centerInParent="true"
	     android:layout_centerVertical="true"
	     android:src="@drawable/main_bg" />

	 <TextView
	     android:id="@+id/logoTitle"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="20dp"
	     android:gravity="center"
	     android:text="@string/logoTitle"
	     android:textColor="#FFFFFF"
	     android:textSize="20dp" />

	 <TextView
	     android:id="@+id/textVersion"
	     android:layout_width="match_parent"
	     android:layout_height="match_parent"
	     android:layout_marginBottom="5dp"
	     android:layout_marginRight="5dp"
	     android:gravity="bottom|right"
	     android:text="@string/year"
	     android:textColor="#FFFFFF" />

	 <TextView
	     android:id="@+id/linkUkrForum"
	     android:layout_width="match_parent"
	     android:layout_height="match_parent"
	     android:layout_marginBottom="30dp"
	     android:layout_marginLeft="10dp"
	     android:autoLink="web"
	     android:gravity="bottom|left"
	     android:text="@string/linkUkrForum"
	     android:textColor="#FFFFFF" />

	 <TextView
	     android:id="@+id/linkRusForum"
	     android:layout_width="match_parent"
	     android:layout_height="match_parent"
	     android:layout_marginBottom="10dp"
	     android:layout_marginLeft="10dp"
	     android:autoLink="web"
	     android:gravity="bottom|left"
	     android:linksClickable="true"
	     android:text="@string/linkRusForum"
	     android:textColor="#FFFFFF" />

</RelativeLayout>